WebKit/mac:

2008-03-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej, landed by Brady

        Bug 3580: iFrames Appear to be Cached
        <http://bugs.webkit.org/show_bug.cgi?id=3580>

        Bug 15486: REGRESSION: Reload causes WebKit to *forget* fragment URLs
        <http://bugs.webkit.org/show_bug.cgi?id=15486>

        Bug 15554: Reload causes <object> to use old data
        <http://bugs.webkit.org/show_bug.cgi?id=15554>

        If a page is reloaded, a child frame's URL can not be taken from a history item.

        * WebView/WebFrame.mm:
        (-[WebFrame _loadURL:referrer:intoChild:]):

LayoutTests:

2008-03-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej, landed by Brady

        Tests for the following bugs:

        Bug 3580: iFrames Appear to be Cached
        <http://bugs.webkit.org/show_bug.cgi?id=3580>

        Bug 15486: REGRESSION: Reload causes WebKit to *forget* fragment URLs
        <http://bugs.webkit.org/show_bug.cgi?id=15486>

        Bug 15554: Reload causes <object> to use old data
        <http://bugs.webkit.org/show_bug.cgi?id=15554>

        * http/tests/navigation/reload-subframe-frame-expected.txt: Added.
        * http/tests/navigation/reload-subframe-frame.html: Added.
        * http/tests/navigation/reload-subframe-iframe-expected.txt: Added.
        * http/tests/navigation/reload-subframe-iframe.html: Added.
        * http/tests/navigation/reload-subframe-object-expected.txt: Added.
        * http/tests/navigation/reload-subframe-object.html: Added.
        * http/tests/navigation/resources/reload-subframe-content.pl: Added.
        * http/tests/navigation/resources/reload-subframe.pl: Added.



Canonical link: https://commits.webkit.org/24933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31264 268f45cc-cd09-0410-ab3c-d52691b4dbfc